--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Your Portfolio</title>
+    <style>
+        /* Add your CSS styles here */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-
-    <h1 style=" font-size: 340px; text-align: center;"> BhedSutra</h1>
-    
+    <div class="container">
+        <h1>ROHAN</h1>
+        <p>Web Developer | Designer | Creative Enthusiast</p>
+        <!-- Add more sections here (e.g., About Me, Projects, Contact) -->
+    </div>
 </body>
+
 </html>
