--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div class="container">
-        <h1><a href="/linkhub.html"> ROHAN </a></h1>
+        <h1><a href="linkhub.html"> ROHAN </a></h1>
         <p>Web Developer | Designer | Creative Enthusiast</p>
         <!-- Add more sections here (e.g., About Me, Projects, Contact) -->
     </div>
