--- a/linkhub.html
+++ b/linkhub.html
@@ -11,7 +11,7 @@
     
 <div class="linkcontainer" id="lct">
 <div class="dp">
-    <img src="/media/img/dp.jpg" alt="">
+    <img src="media/img/dp.jpg" alt="">
 
 </div>
 
