--- a/linkhub.html
+++ b/linkhub.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LinkHub</title>
     <link rel="stylesheet" href="css/lh.css">
+    <link rel="shortcut icon" href="media/img/faviconrd.png" type="image/x-icon" >
 </head>
 <body>
 
