--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Portfolio</title>
+    <link rel="stylesheet" href="">
+    <link rel="shortcut icon" href="media/img/faviconrd.png" type="image/x-icon" >
     <style>
         /* Add your CSS styles here */
         body {
