--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span>|</span>
         <p><a href="">ABOUT</a></p>
         <span>|</span>
-            <p><a href="">PROFILES</a></p>
+            <p><a href="linkhub.html">PROFILES</a></p>
         </div>
 
 
