--- a/linkhub.html
+++ b/linkhub.html
@@ -21,6 +21,7 @@
     <div class="li"><a href="https://www.instagram.com/rdmax0/?hl=en"><p>Instagram</p> </a></div>
     <div class="li"><a href="https://x.com/rdmax0"><p>X</p></a></div>
 <div class="li"> <a href="https://github.com/rdmax0"><p> GitHub</p></a></div>
+<div class="li"> <a href="https://www.linkedin.com/in/rdmax0"><p> LinkedIn</p></a></div>
 
 </div>
 </div>
